Aufnahme von change_home.sh in den gbgclient

--- a/gbgclient-0.1/debian/install
+++ b/gbgclient-0.1/debian/install
@@ -2,6 +2,7 @@ scripts/gbgclient.sh usr/bin
 scripts/delete_connections.sh usr/bin
 scripts/nutzerdatenerfassung.sh usr/bin
 scripts/delete_connections.py usr/bin
+scripts/change_home.sh usr/bin
 gdm3/PostLogin/Default etc/gdm3/PostLogin
 gdm3/PostSession/Default etc/gdm3/PostSession
 gdm3/PreSession/Default etc/gdm3/PreSession
