--- a/dev/gbglehrerclient-0.1/debian/install
+++ b/dev/gbglehrerclient-0.1/debian/install
@@ -1,6 +1,5 @@
-scripts/gbgclient.sh usr/bin
-scripts/delete_connections.sh usr/bin
-scripts/nutzerdatenerfassung.sh usr/bin
+scripts/init_gbgclient.sh usr/bin
+scripts/root_init_gbgclient.sh usr/bin
 scripts/delete_connections.py usr/bin
 scripts/CreatePrivateContainer.sh usr/bin
 scripts/EncryptPrivateContainer.sh usr/bin
@@ -14,7 +13,7 @@ gdm3/PreSession/Default etc/gdm3/PreSession
 updater/updater.sh usr/bin
 updater/updater.desktop usr/share/applications
 updater/updater.svg usr/share/icons
-misc/clear_connections.desktop etc/xdg/autostart
+misc/init_gbgclient.desktop etc/xdg/autostart
 misc/GBG_Custom_Background.png usr/share/backgrounds
 sudoers.d/sudogbgclient etc/sudoers.d/
 usr/share/applications/MountPrivateContainer.desktop usr/share/applications
