--- a/dev/gbgclient-0.1/debian/install
+++ b/dev/gbgclient-0.1/debian/install
@@ -14,3 +14,4 @@ sudoers.d/sudogbgclient etc/sudoers.d/
 etc/skel/.mozilla etc/skel
 etc/skel/.config etc/skel
 etc/skel/.templates etc/skel
+etc/ssh/sshd_config.d/gbg.conf etc/ssh/sshd_config.d
