--- a/dev/gbglehrerclient-0.1/debian/install
+++ b/dev/gbglehrerclient-0.1/debian/install
@@ -27,4 +27,4 @@ beamer/beamer.png usr/share/icons
 usr/share/icons/Joplin.png usr/share/icons
 beamer/beamer.desktop usr/share/applications
 etc/ssh/sshd_config.d/gbg.conf etc/ssh/sshd_config.d
-
+etc/wireguard/start_wg.sh etc/wireguard
