Hinzufügen eines Skripts mit Anwendungsstarter, das einen ssh-Tunnel zu einer Windows-Maschine im Schulnetzwerk herstellt und dann automatisch Remmina startet.

--- a/dev/gbglehrerclient2-0.1/debian/install
+++ b/dev/gbglehrerclient2-0.1/debian/install
@@ -28,3 +28,6 @@ usr/share/icons/Joplin.png usr/share/icons
 beamer/beamer.desktop usr/share/applications
 etc/ssh/sshd_config.d/gbg.conf etc/ssh/sshd_config.d
 etc/wireguard/start_wg.sh etc/wireguard
+scripts/ssh-tunnel.sh usr/bin
+usr/share/icons/ssh-tunnel.svg usr/share/icons
+usr/share/applications/ssh-tunnel.desktop usr/share/applications
